2010-08-31  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* performance optimizations: XML compiler runs 15-20% faster 

2010-08-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	Selector actions split: discards moved from NoErrorCounters to
	NoDiscardCounters;
	and from InErrorsMonitor/OutErrorsMonitor to
	InDiscardsMonitor/OutDiscardsMonitor

	* perllib/Torrus/Collector.pm: collector_tokens database now depends
	on DS configuration instance

2010-08-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/CGI.pm: Added host-based authentication

2010-08-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Updated discovery modules for Net::SNMP 6.0.0 compatibility

2010-08-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* init.d/torrus.in: bugfix in RHEL compatibility.
	Do "chkconfig --del torrus", install the new version into /etc/init.d,
	then "chkconfig --add torrus", then "service torrus restart"	

2010-07-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/snmpfailures.in: new utility for SNMP failures reporting

	* perllib/Torrus/Collector/SNMP.pm: SNMP failures stored in a database

2010-06-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/genlist.in: Added a list of all SNMP hosts

2010-05-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CasaCMTS.pm: new discovery module

2010-05-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/nodeid.in: new command-line utility

	* configure.ac: new Perl module dependency: JSON

2010-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configs/torrus-config.pl:
	replaced $Torrus::ApacheHandler::authorizeUsers with
	$Torrus::CGI::authorizeUsers.

2010-04-08  Jon Nistor  <nistor@snickers.org>
        * perllib/Torrus/DevDiscover/Arbor_E.pm:
        New parameter: Arbor_E::disable-e100-policymgmt, disable-e100-submgmt