@@ -1,3 +1,8 @@
+2010-09-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Collector/SNMP.pm (initCollectorGlobals):
+	Refresh the SNMP maps after a configuration re-compile
+
 2010-08-31  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* performance optimizations: XML compiler runs 15-20% faster 
